--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 </head>
 <body>
     <div class="top-navbar">
-
+        <ul>
+            <li>
+                <a>Home</a>
+            </li>
+            <li>
+                <a>Projects</a>
+            </li>
+            <li>
+                <a>Blogs</a>
+            </li>
+            <li>
+                <a>Contact</a>
+            </li>
+        </ul>
     </div>
     <div>
         <h1>About Me</h1>
