--- a/template.html
+++ b/template.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="top-navbar">
+        <ul>
+            <li>
+                <a>Home</a>
+            </li>
+            <li>
+                <a>Projects</a>
+            </li>
+            <li>
+                <a>Blogs</a>
+            </li>
+            <li>
+                <a>Contact</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
