--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Contact</title>
 </head>
 <body>
     <div class="top-navbar">
@@ -21,6 +21,9 @@
                 <a>Contact</a>
             </li>
         </ul>
+    </div>
+    <div>
+        <h1>Contact</h1>
     </div>
 </body>
 </html>
