--- a/index.html
+++ b/index.html
@@ -37,5 +37,31 @@
             By encouraging students to explore the aesthetic and imaginative aspects of science and tech, it nurtures their curiosity, encourages innovation, and fosters a holistic understanding of the world.
         </p>
     </div>
+    <div>
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                HTML
+            </li>
+            <li>
+                CSS
+            </li>
+            <li>
+                Bootstrap
+            </li>
+            <li>
+                JavaScript
+            </li>
+            <li>
+                React
+            </li>
+            <li>
+                Git
+            </li>
+        </ul>
+    </div>
 </body>
+<footer>
+    <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+</footer>
 </html>
