--- a/projects.html
+++ b/projects.html
@@ -26,4 +26,7 @@
         <h1>Projects</h1>
     </div>
 </body>
+<footer>
+    <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+</footer>
 </html>
