--- a/template.html
+++ b/template.html
@@ -23,4 +23,7 @@
         </ul>
     </div>
 </body>
+<footer>
+    <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+</footer>
 </html>
