linked the external css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Billeh Scego</title>
 </head>
 <body>
@@ -61,7 +62,7 @@
         </ul>
     </div>
 </body>
-<footer>
+<footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
 </footer>
 </html>
