--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Projects</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         <h1>Projects</h1>
     </div>
 </body>
-<footer>
+<footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
 </footer>
 </html>
