--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="top-navbar">
+        <h1>Billeh Scego</h1>
         <ul>
             <li>
                 <a>Home</a>
@@ -24,7 +25,7 @@
         </ul>
     </div>
     <div>
-        <h1>About Me</h1>
+        <h2>About Me</h2>
         <p>
             I am a Science Technology and Society major and also a frontend bootcamp grad. 
             I am also a writer at medium about my learning journey and sharing my thoughts. 
