--- a/template.html
+++ b/template.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="top-navbar">
+        <h1>Billeh Scego</h1>
         <ul>
             <li>
                 <a>Home</a>
