working on navbar

--- a/blogs.html
+++ b/blogs.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Site Map</title>
+    <title>Blogs</title>
 </head>
 <body>
     <div class="top-nav">
@@ -24,8 +23,8 @@
             </li>
         </ul>
     </div>
+    <div>
+        <h1>Blogs</h1>
+    </div>
 </body>
-<footer class="footer">
-    <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
-</footer>
 </html>
