--- a/template.html
+++ b/template.html
@@ -7,20 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="top-navbar">
-        <h1>Billeh Scego</h1>
-        <ul>
-            <li>
-                <a>Home</a>
+    <div class="top-nav">
+        <a href="/index.html"><h1 class="list-hover">Billeh Scego</h1></a>
+        <ul class="top-nav-list">
+            <li class="list-hover">
+                <a href="index.html">Home</a>
             </li>
-            <li>
-                <a>Projects</a>
+            <li class="list-hover">
+                <a href="/projects.html">Projects</a>
             </li>
-            <li>
-                <a>Blogs</a>
+            <li class="list-hover">
+                <a href="/blogs.html">Blogs</a>
             </li>
-            <li>
-                <a>Contact</a>
+            <li class="list-hover">
+                <a href="/contact.html">Contact</a>
             </li>
         </ul>
     </div>
