fixed the blogs page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
             </li>
         </ul>
     </div>
+    <div>
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <a href="https://www.uwb.edu/">University of Washington Bothell:</a>
+            </li>
+            <p>
+                Degree: BA in Science Technology and Society
+            </p>
+            <li>
+                <a href="https://promineotech.com/">Promineo Tech:</a>
+            </li>
+            <p>
+                Certificate: Frontend Web Development
+            </p>
+            <li>
+                <a href="https://seattlecentral.edu/">Seattle Central:</a>
+            </li>
+            <p>
+
+            </p>
+        </ul>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
