--- a/index.html
+++ b/index.html
@@ -72,18 +72,26 @@
                 Degree: BA in Science Technology and Society
             </p>
             <li>
+                <a href="https://seattlecentral.edu/">Seattle Central:</a>
+            </li>
+            <p>
+                Degree: AA in Arts and Science
+            </p>
+        </ul>
+    </div>
+    <div>
+        <h2>Certificates</h2>
+        <ul>
+            <li>
                 <a href="https://promineotech.com/">Promineo Tech:</a>
             </li>
             <p>
                 Certificate: Frontend Web Development
             </p>
-            <li>
-                <a href="https://seattlecentral.edu/">Seattle Central:</a>
-            </li>
-            <p>
-
-            </p>
         </ul>
+        <p>
+            Certificate: Frontend Web Development
+        </p>
     </div>
 </body>
 <footer class="footer">
