added meta tags and changed navbar commit

--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Billeh Scego">
     <link rel="stylesheet" href="index.css">
-    <title>Projects</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="top-nav">
@@ -28,11 +28,5 @@
             </li>
         </ul>
     </div>
-    <div>
-        <h1>Projects</h1>
-    </div>
 </body>
-<footer class="footer">
-    <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
-</footer>
 </html>
