--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Billeh Scego">
+    <meta name="description" content="Billeh Scego, peronal portfolio site, Frontend Web development">
     <link rel="stylesheet" href="index.css">
     <title>Billeh Scego</title>
 </head>
@@ -18,6 +20,9 @@
             </li>
             <li class="list-hover">
                 <a href="/blogs.html">Blogs</a>
+            </li>
+            <li class="list-hover">
+                <a href="/testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
                 <a href="/contact.html">Contact</a>
