--- a/siteMap.html
+++ b/siteMap.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Billeh Scego">
     <link rel="stylesheet" href="index.css">
     <title>Site Map</title>
 </head>
@@ -18,6 +19,9 @@
             </li>
             <li class="list-hover">
                 <a href="/blogs.html">Blogs</a>
+            </li>
+            <li class="list-hover">
+                <a href="/testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
                 <a href="/contact.html">Contact</a>
