added an article to testimonials commit

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,25 @@
     <div>
         <h1>Contact</h1>
     </div>
+    <div>
+        <h2>Billeh Scego</h2>
+        <h3><a href="/projects.html">Frontend Web Developer</a> | JavaScript , CSS, HTML, Bootstrap, React</h3>
+        <div>
+            <p>
+                👋 Hi, I’m Billeh. <br>
+                I am a <a href="https://en.wikipedia.org/wiki/Science_and_technology_studies">Science Technology and Society</a> major and also a frontend bootcamp grad. 
+                This helps me a write on medium about my learning journey and sharing my thoughts. 
+                Finally I started STE{A}M an acronym for science technology engineering {art} technology.
+            </p>
+            <p>
+                STE{A}M a Science technology and Society Publication's core philosophy is that progress in society comes from the collaboration of these different discipline. 
+            </p>
+            <p>
+                STE{A}M also highlights the importance of incorporating art and creativity into STEM education and vice versa in the humanities. 
+                By encouraging students to explore the aesthetic and imaginative aspects of science and tech, it nurtures their curiosity, encourages innovation, and fosters a holistic understanding of the world.
+            </p>
+        </div>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
