--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Billeh Scego">
+    <meta name="description" content="Billeh Scego, Testimonials, Frontend Web development Promineo Tech Bootcamp">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Testimonials</title>
 </head>
 <body>
     <div class="top-nav">
@@ -28,5 +29,91 @@
             </li>
         </ul>
     </div>
+    <div>
+        <h1>Testimonials</h1>
+    </div>
+    <div>
+        <h2>October 2022 Student of the Month: Billeh Scego</h2>
+        <img src="/Images/studentOfTheMonth.webp" alt="Student of the Month: Billeh Scego">
+        <h2>From Career Indecision to Success Amid a Global Pandemic</h2>
+        <p>
+            While attending Seattle Central College, Billeh Scego, like so many others starting their careers, was not completely sure what to study. 
+            He knew he wanted to do something with technology but was unsure which area of tech would most interest him. 
+            While working at Target he explored possibilities such as tech sales, smart homes, and game development. 
+            After dabbling in UI/UX design, he realized that he wanted to be the person coding and implementing the designs instead of designing and wireframing them. 
+            Although Billeh had cleared the hurdle of deciding which direction to take his education and career, he was now faced with something he hadn’t expected – a global pandemic.
+        </p>
+        <h2>Finding the Perfect Coding Bootcamp Amidst the Pandemic</h2>
+        <p>
+            Because COVID caused a mass schooling transition to online delivery, the conversion period felt, to many, as though there was a real pause in their education. 
+            Billeh was unsure of what to do next or how to continue down the path he had started down with coding. 
+            He began looking into coding bootcamps as an alternative option to keep the ball rolling. 
+            <em>“I did a lot of research on coding bootcamps and found that most of them had outstandingly expensive tuitions and that many of them were also full-time, which wouldn’t work for my situation,”</em> Billeh shared. 
+            Then, one day while Billeh was on Instagram, he found some information about Central Washington University’s Coding Bootcamp in partnership with Promineo Tech. 
+            Because of the cost and part-time flexibility that allowed him to keep up with prior engagements, Billeh saw this as the best step forward on his coding journey.
+        </p>
+        <h2>Intensive Learning and the Power of JavaScript</h2>
+        <p>
+            Billeh described the first three weeks of the bootcamp as intensive, but utilizing the resources available helped him find a groove and work through any difficulties. 
+            Although he had tried learning other programming languages before, nothing seemed to fully click until he started learning JavaScript in these first weeks. 
+            He attributes this to the fact that JS is a more syntactically relaxed programming language, and the tooling (such as VS Code) made it easier to work with as opposed to some of the previous tooling he had used at other institutions. 
+            Once he had a grasp of JS, the rest of the bootcamp, while still holding some challenges, went very well. 
+        </p>
+        <h2>Engaging and Interactive Learning Experience at Promineo Tech</h2>
+        <p>
+            <em>“In past coding classes I attended, it felt like the teacher would talk at the class for an hour and a half and then say, ‘go code’, and everyone was quiet. 
+            It feels like a library. 
+            However, my experience at Promineo Tech was different. 
+            It was super engaging, and even though it was an online program, it felt like it was in-person.”</em>
+            Billeh also shared that “learning to code is different than learning other subjects” because most subjects require rote memorization, while software development is more about problem-solving and critical thinking. 
+            Yes, you do build up muscle memory and memorize some syntax, but the real learning comes from engaging with the content and really getting your hands dirty by breaking things and building things you enjoy working on.
+        </p>
+        <h2>The Challenge of Object-Oriented Programming</h2>
+        <p>
+            When asked about the most difficult part of the program, Billeh said that Object-Oriented Programming felt a little foreign, and that the functional programming paradigm made more sense to him, which is a good thing in his case since more JavaScript and React programming is done in a functional style. 
+            <em>“The most enjoyable part was getting to work with classmates. We have a pretty active Discord group and can also use Slack to message other students and mentors. I believe many of us will be lifelong friends, and I hope to see everyone do well in life post bootcamp graduation.”</em>
+        </p>
+        <h2>Collaborating with Classmates and Building Lifelong Connections</h2>
+        <p>
+            Throughout the program, Billeh worked on some projects that he is proud of, including an environmental science page for one of his college professors and a Pokémon team-building project that he is wrapping up for his final assignment.
+            <em>“I wanted to simulate freelancing, so I built an environmental science page for my Professor to use for her future classes that contained material and information about each unit up until the midterm,”</em> said Billeh.
+            He went on to say that the project will continue to be used in real life for some time.
+            <em>“She loved the project and is using it for her future classes!”</em>
+        </p>
+        <p>Check out that project here: <a href="https://scegob.github.io/week8CSSCodingProjectEnviornmentalScience/" target="_blank">Environmental Science Page</a></p>
+        <p>
+            Regarding his final project, Billeh shared that <em>“What they say is true, you want to build a project you’re going to enjoy and talk about.”</em>
+            This is why he decided to change his original plans that utilized the DoorDash API and instead use PokeAPI as the data source for his final project. 
+            Having played the handheld Pokémon games competitively a few years back, he has been able to combine an old passion with a new skill set to build something really cool! 
+            In addition to playing the handheld series competitively, Billeh also previously developed a passion for the popular game Pokémon Go that extended beyond entertainment.
+        </p>
+        <h2>Combining Passion and Skill: Pokémon Go and a Dream to Work at Niantic or Nintendo</h2>
+        <p>
+            <em>“In 2021, I weighed almost 256 pounds,” Billeh shared. “I used Pokémon Go like a gym with a goal to walk over 10,000 steps a day and was able to lose over 50 pounds in 6 months.”</em>
+            It’s no surprise that because of both the physical and nostalgic draw to these games that when asked what his dream companies would be to work at, Billeh said <a href="https://nianticlabs.com/?hl=en" target="_blank">Niantic</a> or <a href="https://www.nintendo.com/us/" target="_blank">Nintendo</a>. 
+            Additionally, because it is right down the road, and because of the innovation that frequently comes out of the company, <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft</a> is also on his list of top companies to work for.
+        </p>
+        <h2>Networking and Career Advancement Strategies</h2>
+        <p>
+            Landing a job at top companies like these can take a lot of hard work, dedication, and networking. 
+            Luckily, Billeh made a conscious effort early on in the bootcamp to engage with the broader coding community and hone his LinkedIn networking prowess while building genuine connections.
+            <em>“Before the bootcamp, I was a little more introverted. Then you add COVID to that, and it became very difficult to meet people.”</em>
+            However, Billeh explained that once he acknowledged and got rid of his self-limiting belief, he was able to open up more and make meaningful connections. 
+            He also took advantage of the career service options in the bootcamp, part of which advise posting weekly on LinkedIn. 
+            He quickly became good at this and realized that to take his posts to the next level, he needed to do more than simply share what he was learning.
+            <em>“In order to get engagement, you have to engage with others,”</em> Billeh explained.
+            <em>“LinkedIn has a huge coding community, and everyone is there to help each other out.”</em>
+        </p>
+        <p>
+            He further explained how he made sure to interact with content that other students from other bootcamps and schools shared on LinkedIn and how it was great to see the progress people made when they posted.
+            <em>“It’s not just an island. You can make it an island if you want, but you’re not going to progress as fast,”</em> said Billeh.
+            Interested in changing careers and becoming a software developer? 
+            Learn more about Promineo Tech’s programs and how we help students make this transition through affordable, low-risk technology education: Start Your Journey: Exploring Promineo Tech’s Coding Programs for Career Transition
+        </p>
+        <h3>Article originally posted on <a href="https://promineotech.com/october-2022-student-of-the-month-billeh-scego/" target="_blank">Promineo Tech</a></h3>
+    </div>
+    <footer class="footer">
+        <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+    </footer>
 </body>
 </html>
