added an anchor tag to contacts commit

--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
         <div>
             <p>
                 👋 Hi, I’m Billeh. <br>
-                I am a <a href="https://en.wikipedia.org/wiki/Science_and_technology_studies">Science Technology and Society</a> major and also a frontend bootcamp grad. 
+                I am a <a href="https://en.wikipedia.org/wiki/Science_and_technology_studies" target="_blank">Science Technology and Society</a> major and also a frontend bootcamp grad. 
                 This helps me a write on medium about my learning journey and sharing my thoughts. 
-                Finally I started STE{A}M an acronym for science technology engineering {art} technology.
+                Finally I started <a href="https://medium.com/science-technology-and-society" target="_blank">STE{A}M</a> an acronym for science technology engineering {art} technology.
             </p>
             <p>
                 STE{A}M a Science technology and Society Publication's core philosophy is that progress in society comes from the collaboration of these different discipline. 
