added to blog section and sitemap

--- a/blogs.html
+++ b/blogs.html
@@ -31,6 +31,15 @@
     <div>
         <h1>Blogs</h1>
     </div>
+    <!-- I want to base the blog section similar to that of medium as my second level design -->
+    <div>
+        <h2><a href="https://medium.com/p/b2a03b1f1977" target="_blank">Erik Erikson: Exploring the Stages of Psychosocial Development and why it is important.</a></h2>
+        <p>
+
+        </p>
+        <img>
+        <p>9 min read</p>
+    </div>
     <footer class="footer">
         <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
     </footer>
