--- a/siteMap.html
+++ b/siteMap.html
@@ -28,6 +28,32 @@
             </li>
         </ul>
     </div>
+    <div>
+        <h1>Site Map</h1>
+    </div>
+    <div>
+        <h2>Blogs</h2>
+        <ul>
+            <li></li>
+        </ul>
+        <h2>Contact</h2>
+        <ul>
+            <li><a href="https://github.com/scegob" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/scegob/" target="_blank">Linkedin</a></li>
+        </ul>
+        <h2>Home</h2>
+        <ul>
+            <li></li>
+        </ul>
+        <h2>Projects</h2>
+        <ul>
+            <li></li>
+        </ul>
+        <h2>Testimonials</h2>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
