creating a card for the blog section

--- a/blogs.html
+++ b/blogs.html
@@ -32,13 +32,41 @@
         <h1>Blogs</h1>
     </div>
     <!-- I want to base the blog section similar to that of medium as my second level design -->
-    <div>
+    <div class="blog">
         <h2><a href="https://medium.com/p/b2a03b1f1977" target="_blank">Erik Erikson: Exploring the Stages of Psychosocial Development and why it is important.</a></h2>
         <p>
 
         </p>
-        <img>
+        <img src="/Images/erikErikson.jpg" class="blog-image">
         <p>9 min read</p>
+    </div>
+    <div class="blog">
+        <h2><a href="https://medium.com/p/6f1cbae3a4f2" target="_blank">Online resources that I have used in my coding journey.</a></h2>
+        <p>
+
+        </p>
+        <img src="/Images/codingGold.jpg" class="blog-image">
+        <p>7 min read</p>
+    </div>
+    <div class="blog">
+        <h2><a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a></h2>
+        <p>
+
+        </p>
+        <img src="/Images/microsoft.jpg" class="blog-image">
+        <p>5 min read</p>
+    </div>
+    <div class="blog">
+        <h2><a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a></h2>
+        <p>
+
+        </p>
+        <img src="/Images/buddyPokemon.jpg" class="blog-image">
+        <p>9 min read</p>
+    </div>
+    <div>
+        <h2>For more articles, follow me below:</h2>
+        <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
     </div>
     <footer class="footer">
         <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
