changed the last h2 tag in blogs

--- a/blogs.html
+++ b/blogs.html
@@ -65,7 +65,7 @@
         <p>9 min read</p>
     </div>
     <div>
-        <h2>For more articles, follow me below:</h2>
+        <h2>For more articles:</h2>
         <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
     </div>
     <footer class="footer">
