working on the css for blogs

--- a/blogs.html
+++ b/blogs.html
@@ -33,36 +33,52 @@
     </div>
     <!-- I want to base the blog section similar to that of medium as my second level design -->
     <div class="blog">
+        <hr class="horizontal">
         <h2><a href="https://medium.com/p/b2a03b1f1977" target="_blank">Erik Erikson: Exploring the Stages of Psychosocial Development and why it is important.</a></h2>
         <p>
 
         </p>
         <img src="/Images/erikErikson.jpg" class="blog-image">
-        <p>9 min read</p>
+        <div>
+            <p class="tags">Psychology</p>
+            <p class="minute-read">9 min read</p>
+        </div>
     </div>
     <div class="blog">
+        <hr class="horizontal">
         <h2><a href="https://medium.com/p/6f1cbae3a4f2" target="_blank">Online resources that I have used in my coding journey.</a></h2>
         <p>
 
         </p>
         <img src="/Images/codingGold.jpg" class="blog-image">
-        <p>7 min read</p>
+        <div>
+            <p class="tags">Programming</p>
+            <p>7 min read</p>
+        </div>
     </div>
     <div class="blog">
+        <hr class="horizontal">
         <h2><a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a></h2>
         <p>
 
         </p>
         <img src="/Images/microsoft.jpg" class="blog-image">
-        <p>5 min read</p>
+        <div>
+            <p class="tags">Web Design</p>
+            <p class="minute-read">5 min read</p>
+        </div>
     </div>
     <div class="blog">
+        <hr class="horizontal">
         <h2><a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a></h2>
         <p>
 
         </p>
         <img src="/Images/buddyPokemon.jpg" class="blog-image">
-        <p>9 min read</p>
+        <div>
+            <p class="tags">Health</p>
+            <p class="minute-read">9 min read</p>
+        </div>
     </div>
     <div>
         <h2>For more articles:</h2>
