Changed the tags class in blogs

--- a/template.html
+++ b/template.html
@@ -28,6 +28,12 @@
             </li>
         </ul>
     </div>
+    <!-- Main Content Area                   |
+|                                                       |
+|  Introduction                                         |
+|  Featured Projects/Works                               |
+|  Skills Overview                                      |
+|  Testimonials/Client Feedback   -->
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
