--- a/templateSecondDesign.html
+++ b/templateSecondDesign.html
@@ -28,6 +28,13 @@
             </li>
         </ul>
     </div>
+    <!-- Project Title                                        |
+|  Project Description                                  |
+|  Project Images/Video                                 |
+|  Technologies Used                                    |
+|  Project Features                                     |
+|  Code Snippets/Examples                               |
+|  Link to Live Demo/GitHub Repo -->
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
