--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
     </div>
     <div>
         <h2>Billeh Scego</h2>
+        <img src="/Images/emojis/peace.svg" height="50px" width="50px">
         <h3><a href="/projects.html">Frontend Web Developer</a> | JavaScript , CSS, HTML, Bootstrap, React</h3>
         <div>
             <p>
