added a browser tab icon and other assets

--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Billeh Scego">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/svg" href="/Images/icons/B.svg">
     <title>Projects</title>
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><h1 class="list-hover">Billeh Scego</h1></a>
+        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
                 <a href="index.html">Home</a>
