--- a/testimonials.html
+++ b/testimonials.html
@@ -6,11 +6,12 @@
     <meta name="author" content="Billeh Scego">
     <meta name="description" content="Billeh Scego, Testimonials, Frontend Web development Promineo Tech Bootcamp">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/svg" href="/Images/icons/B.svg">
     <title>Testimonials</title>
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><h1 class="list-hover">Billeh Scego</h1></a>
+        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
                 <a href="index.html">Home</a>
