added more to blogs

--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,9 @@
         <hr class="horizontal">
         <h2><a href="https://medium.com/p/b2a03b1f1977" target="_blank">Erik Erikson: Exploring the Stages of Psychosocial Development and why it is important.</a></h2>
         <p>
-
+            Erik Erikson is one of my favorite psychologists. 
+            His profound insights into human development have had a lasting impact on my thought process. 
+            Erikson’s theory of psychosocial development deepened our understanding of the complex interactions between social dynamics and human development, going beyond the scope of merely biological and psychological processes.
         </p>
         <img src="/Images/erikErikson.jpg" class="blog-image">
         <div>
@@ -49,7 +51,7 @@
         <hr class="horizontal">
         <h2><a href="https://medium.com/p/6f1cbae3a4f2" target="_blank">Online resources that I have used in my coding journey.</a></h2>
         <p>
-
+            The number one thing I learned from <a href="https://promineotech.com/" target="_blank">Promineo Tech’s</a> frontend bootcamp was that online resources are a google search away but I hope that this medium article can be a one-stop-shop for current and future programmers.
         </p>
         <img src="/Images/codingGold.jpg" class="blog-image">
         <div>
@@ -61,7 +63,8 @@
         <hr class="horizontal">
         <h2><a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a></h2>
         <p>
-
+            What question(s) do you think the site exists to answer?
+            The website provides information about features, pricing, compatibility, and effective usage of Microsoft’s products and services. It responds to inquiries regarding software updates, technical problems, troubleshooting, and offers resources for customers looking for assistance with Microsoft products.
         </p>
         <img src="/Images/microsoft.jpg" class="blog-image">
         <div>
@@ -73,7 +76,10 @@
         <hr class="horizontal">
         <h2><a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a></h2>
         <p>
-
+            Niantic is a world renowned for augmented reality also known as AR and on their homepage they have a goal for AR to improve people’s life, “What if augmented reality could make us better? 
+            Could it nudge us off the couch for a Saturday in the park?”. 
+            Besides the augmented reality, the thing I like about this application is how it tracks your steps weekly and gives you rewards and incentives through how many miles you walk. 
+            You can find pokemon and collect items at stops in different locations and the only way to move in the game is by walking. This gamification of healthy activities has really been pivotal for my weight loss and I know that it can do the same for others.
         </p>
         <img src="/Images/buddyPokemon.jpg" class="blog-image">
         <div>
@@ -83,7 +89,14 @@
     </div>
     <div>
         <h2>For more articles:</h2>
-        <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+        <span>
+            <ul class="list-style">
+                <li>
+                    <img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo">
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                </li>
+            </ul>
+        </span>
     </div>
     <footer class="footer">
         <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
