--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Billeh Scego">
     <meta name="description" content="Billeh Scego, peronal portfolio site, Frontend Web development">
     <link rel="stylesheet" href="index.css">
+    <!-- browser tab icon  -->
     <link rel="icon" type="image/svg" href="/Images/icons/B.svg">
     <title>Billeh Scego</title>
 </head>
