working of the projects page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <p>
             I am a Science Technology and Society major and also a frontend bootcamp grad. 
             I am also a writer at medium about my learning journey and sharing my thoughts. 
-            Finally I started <a href="https://students.washington.edu/scegob/index.html" target="_blank">STE{A}M</a> an acronym for science technology engineering {art} technology.
+            Finally I started <a href="https://medium.com/science-technology-and-society" target="_blank">STE{A}M</a> an acronym for science technology engineering {art} technology.
         </p>
+        <!-- 
+            
+            https://students.washington.edu/scegob/index.html 
+        -->
         <p>
             STE{A}M a Science technology and Society Publication's core philosophy is that progress in society comes from the collaboration of these different discipline.
         </p>
