--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,31 @@
     <div>
         <h1>Projects</h1>
     </div>
+    <div>
+        <hr class="horizontal">
+        <h3 class="text-center"><a href="https://scegob.github.io/week8CSSCodingProjectEnviornmentalScience/" target="_blank">Environmental Science</a></h3>
+        <img src="/Images/projects/enviornmentalScience.png" alt="Enviornmental Science Page" class="website-image">
+        <p>
+            Working with my Professor, I oversaw the development of an Environmental Science webpage customized for our course syllabus. 
+            This extensive platform serves as an interactive study guide for both present and future students, and it was painstakingly designed to encompass the range of topics we covered throughout our sessions. 
+            I have methodically prepared a reservoir of resources, including educational articles, visual aids, and supplemental materials, to facilitate learning and memory. 
+            This has been achieved via diligent research and effort. 
+            It gives me great satisfaction to know that my lecturer still uses this website as a starting point when he or she is trying to explain environmental studies to new students.
+        </p>
+    </div>
+    <div>
+        <hr class="horizontal">
+        <h3 class="text-center"><a href="https://scegob.github.io/week11ticTacToe/" target="_blank">Tic Tac Toe</a></h3>
+        <img src="/Images/projects/ticTacToe.png" alt="Tic Tac Toe Game Page" class="website-image">
+        <img src="/Images/projects/ticTacToeMobile.png" alt="Tic Tac Toe Game Page Mobile View" class="website-image">
+        <p>
+            I took on the challenge of creating a traditional Tic Tac Toe game as part of my quest to improve my JavaScript abilities, and the result is a project that I am glad to have in my portfolio. 
+            I was able to go deeply into the language with this project and use it to create a dynamic and engaging gaming experience. 
+            I concentrated on decomposing the game logic into digestible chunks and creating the framework and functionality from the ground up. 
+            I was able to hone my problem-solving skills and learn more about the complexities of JavaScript, including how it can handle game dynamics and user interactions. 
+            Creating this project demonstrated my technical proficiency as well as my commitment to lifelong learning and real-world programming application.
+        </p>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
