got done with the blog section in the site map

--- a/blogs.html
+++ b/blogs.html
@@ -92,7 +92,7 @@
         <span>
             <ul class="list-style">
                 <li>
-                    <img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo">
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
                     <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
                 </li>
             </ul>
