--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,17 @@
             Creating this project demonstrated my technical proficiency as well as my commitment to lifelong learning and real-world programming application.
         </p>
     </div>
+    <div>
+        <h2>For more Projects:</h2>
+        <span>
+            <ul class="list-style">
+                <li>
+                    <a href="https://github.com/scegob" target="_blank"><img src="./Images/icons/github.svg" height="50px" width="50px" alt="Medium Logo"></a>
+                    <p><a href="https://github.com/scegob" target="_blank">Github</a></p>
+                </li>
+            </ul>
+        </span>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
