--- a/siteMap.html
+++ b/siteMap.html
@@ -35,12 +35,30 @@
     <div>
         <h2>Blogs</h2>
         <ul>
-            <li></li>
+            <li>
+                <a href="https://medium.com/p/b2a03b1f1977" target="_blank">Erik Erikson: Exploring the Stages of Psychosocial Development and why it is important.</a>
+            </li>
+            <li>
+                <a href="https://medium.com/p/6f1cbae3a4f2" target="_blank">Online resources that I have used in my coding journey.</a>
+            </li>
+            <li>
+                <a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a>
+            </li>
+            <li>
+                ><a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a>
+            </li>
+            <li>
+
+            </li>
         </ul>
         <h2>Contact</h2>
         <ul>
-            <li><a href="https://github.com/scegob" target="_blank">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/scegob/" target="_blank">Linkedin</a></li>
+            <li>
+                <a href="https://github.com/scegob" target="_blank">Github</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/scegob/" target="_blank">Linkedin</a>
+            </li>
         </ul>
         <h2>Home</h2>
         <ul>
