--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,25 @@
             </p>
         </div>
     </div>
+    <div>
+        <h2>Contact me here:</h2>
+        <span>
+            <ul class="list-style contacts">
+                <li>
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                </li>
+                <li>
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                </li>
+                <li>
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                </li>
+            </ul>
+        </span>
+    </div>
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
