finished site map

--- a/siteMap.html
+++ b/siteMap.html
@@ -45,10 +45,13 @@
                 <a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a>
             </li>
             <li>
-                ><a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a>
+                <a href="https://medium.com/p/43a8bf3f6f4a" target="_blank">Gamifying Weight Loss: How Pokemon Go Can Motivate You to Shed Pounds.</a>
             </li>
             <li>
-
+                <a href="https://medium.com/science-technology-and-society/beyond-standardization-challenging-notions-of-a-standard-human-in-science-and-healthcare-a98fd68e6a98" target="_blank">Beyond Standardization: Challenging Notions of a ‘Standard’ Human in Science and Healthcare.</a>
+            </li>
+            <li>
+                <a href="https://medium.com/science-technology-and-society/the-law-of-action-e531baf97a32" target="_blank">The Law of Action.</a>
             </li>
         </ul>
         <h2>Contact</h2>
@@ -59,18 +62,30 @@
             <li>
                 <a href="https://www.linkedin.com/in/scegob/" target="_blank">Linkedin</a>
             </li>
+            <li>
+                <a href="https://medium.com/@scegob" target="_blank">Medium</a>
+            </li>
         </ul>
         <h2>Home</h2>
         <ul>
-            <li></li>
+            <li>
+                <a href="/index.html" target="_blank">Home</a>
+            </li>
         </ul>
         <h2>Projects</h2>
         <ul>
-            <li></li>
+            <li>
+                <a href="https://scegob.github.io/week8CSSCodingProjectEnviornmentalScience/" target="_blank">Environmental Science</a>
+            </li>
+            <li>
+                <a href="https://scegob.github.io/week11ticTacToe/" target="_blank">Tic-Tac-Toe</a>
+            </li>
         </ul>
         <h2>Testimonials</h2>
         <ul>
-            <li></li>
+            <li>
+                <a href="/testimonials.html" target="_blank">Student of the Month</a>
+            </li>
         </ul>
     </div>
 </body>
