--- a/blogs.html
+++ b/blogs.html
@@ -64,7 +64,8 @@
         <h2><a href="https://medium.com/p/2a875b78e965" target="_blank">Microsoft Web Critique.</a></h2>
         <p>
             What question(s) do you think the site exists to answer?
-            The website provides information about features, pricing, compatibility, and effective usage of Microsoft’s products and services. It responds to inquiries regarding software updates, technical problems, troubleshooting, and offers resources for customers looking for assistance with Microsoft products.
+            The website provides information about features, pricing, compatibility, and effective usage of Microsoft’s products and services. 
+            It responds to inquiries regarding software updates, technical problems, troubleshooting, and offers resources for customers looking for assistance with Microsoft products.
         </p>
         <img src="/Images/microsoft.jpg" class="blog-image">
         <div>
@@ -85,6 +86,32 @@
         <div>
             <p class="tags">Health</p>
             <p class="minute-read">9 min read</p>
+        </div>
+        <div class="blog">
+            <hr class="horizontal">
+            <h2><a href="https://medium.com/p/2a875b78e965" target="_blank">Beyond Standardization: Challenging Notions of a ‘Standard’ Human in Science and Healthcare.</a></h2>
+            <p>
+                The “Politics of Science” course last year was one of my favorites. 
+                This course examined the complex interrelationship between politics and scientific progress, examining how political issues affect scientific discoveries and the applications that follow. 
+                We engaged in fascinating debates and looked at thought-provoking case studies throughout the semester, which helped me to better appreciate the dynamic relationship between science and society.
+            </p>
+            <img src="/Images/standardMan.jpg" class="blog-image" alt="The Standard Man">
+            <div>
+                <p class="tags">Science</p>
+                <p class="minute-read">5 min read</p>
+            </div>
+            <div class="blog">
+                <hr class="horizontal">
+                <h2><a href="https://medium.com/science-technology-and-society/the-law-of-action-e531baf97a32" target="_blank">The Law of Action.</a></h2>
+                <p>
+                    Failure is a necessary component to success, and this is a fact that many people are afraid to acknowledge because it will require change that they are not willing to make. 
+                    This approach aligns with the concept of a Growth Mindset, where setbacks are viewed as opportunities for improvement rather than insurmountable obstacles.
+                </p>
+                <img src="/Images/lawOfAction.jpg" class="blog-image" alt="The Standard Man">
+                <div>
+                    <p class="tags">Growth</p>
+                    <p class="minute-read">5 min read</p>
+                </div>
         </div>
     </div>
     <div>
