changed footer and connected site map to all

--- a/index.html
+++ b/index.html
@@ -54,23 +54,36 @@
         <h2>Experience</h2>
         <ul>
             <li>
-                HTML
+                <img src="./Images/Skills/html5.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>HTML</p>
             </li>
             <li>
-                CSS
+                <img src="./Images/Skills/css3.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>CSS</p>
             </li>
             <li>
-                Bootstrap
+                <img src="./Images/Skills/bootstrap.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>Bootstrap</p>
             </li>
             <li>
-                JavaScript
+                <img src="./Images/Skills/javascript.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>JavaScript</p>
             </li>
             <li>
-                React
+                <img src="./Images/Skills/jquery.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>Jquery</p>
             </li>
             <li>
-                Git
+                <img src="./Images/Skills/react.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>React</p>
             </li>
+            <li>
+                <img src="./Images/Skills/typescript.svg" height="50px" width="50px" alt="Medium Logo">
+                <p>TypeScript</p>
+            </li>
+            <!-- <li>
+                <p>Git</p>
+            </li> -->
         </ul>
     </div>
     <div>
@@ -107,5 +120,6 @@
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+    <a href="/siteMap.html"><p>Site Map</p></a>
 </footer>
 </html>
