--- a/projects.html
+++ b/projects.html
@@ -71,5 +71,6 @@
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+    <a href="/siteMap.html"><p>Site Map</p></a>
 </footer>
 </html>
