--- a/testimonials.html
+++ b/testimonials.html
@@ -115,6 +115,7 @@
     </div>
     <footer class="footer">
         <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
+        <a href="/siteMap.html"><p>Site Map</p></a>
     </footer>
 </body>
 </html>
