Made sure the alts in images were correct

--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
             His profound insights into human development have had a lasting impact on my thought process. 
             Erikson’s theory of psychosocial development deepened our understanding of the complex interactions between social dynamics and human development, going beyond the scope of merely biological and psychological processes.
         </p>
-        <img src="/Images/erikErikson.jpg" class="blog-image">
+        <img src="/Images/erikErikson.jpg" class="blog-image" alt="Erik Erikson">
         <div>
             <p class="tags">Psychology</p>
             <p class="minute-read">9 min read</p>
@@ -53,7 +53,7 @@
         <p>
             The number one thing I learned from <a href="https://promineotech.com/" target="_blank">Promineo Tech’s</a> frontend bootcamp was that online resources are a google search away but I hope that this medium article can be a one-stop-shop for current and future programmers.
         </p>
-        <img src="/Images/codingGold.jpg" class="blog-image">
+        <img src="/Images/codingGold.jpg" class="blog-image" alt="Tressure Chest">
         <div>
             <p class="tags">Programming</p>
             <p>7 min read</p>
@@ -67,7 +67,7 @@
             The website provides information about features, pricing, compatibility, and effective usage of Microsoft’s products and services. 
             It responds to inquiries regarding software updates, technical problems, troubleshooting, and offers resources for customers looking for assistance with Microsoft products.
         </p>
-        <img src="/Images/microsoft.jpg" class="blog-image">
+        <img src="/Images/microsoft.jpg" class="blog-image" alt="Microsoft Logo">
         <div>
             <p class="tags">Web Design</p>
             <p class="minute-read">5 min read</p>
@@ -82,7 +82,7 @@
             Besides the augmented reality, the thing I like about this application is how it tracks your steps weekly and gives you rewards and incentives through how many miles you walk. 
             You can find pokemon and collect items at stops in different locations and the only way to move in the game is by walking. This gamification of healthy activities has really been pivotal for my weight loss and I know that it can do the same for others.
         </p>
-        <img src="/Images/buddyPokemon.jpg" class="blog-image">
+        <img src="/Images/buddyPokemon.jpg" class="blog-image" alt="Image of my Buddy Pokemon Squirtle using the Artificial Reality Game PokemonGo ">
         <div>
             <p class="tags">Health</p>
             <p class="minute-read">9 min read</p>
@@ -107,7 +107,7 @@
                     Failure is a necessary component to success, and this is a fact that many people are afraid to acknowledge because it will require change that they are not willing to make. 
                     This approach aligns with the concept of a Growth Mindset, where setbacks are viewed as opportunities for improvement rather than insurmountable obstacles.
                 </p>
-                <img src="/Images/lawOfAction.jpg" class="blog-image" alt="The Standard Man">
+                <img src="/Images/lawOfAction.jpg" class="blog-image" alt="Knight riding a horse">
                 <div>
                     <p class="tags">Growth</p>
                     <p class="minute-read">5 min read</p>
