--- a/contact.html
+++ b/contact.html
@@ -57,16 +57,16 @@
         <span>
             <ul class="list-style contacts">
                 <li>
-                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
-                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/linkedin.svg" height="50px" width="50px" alt="LinkedIn Logo"></a>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">LinkedIn</p></a>
+                </li>
+                <li>
+                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/github.svg" height="50px" width="50px" alt="GitHub Logo"></a>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">GitHub/p></a>
                 </li>
                 <li>
                     <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
-                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
-                </li>
-                <li>
-                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
-                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</a></p>
+                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">Medium</p></a>
                 </li>
             </ul>
         </span>
