--- a/index.html
+++ b/index.html
@@ -51,34 +51,34 @@
         </p>
     </div>
     <div>
-        <h2>Experience</h2>
+        <a href="/projects.html" target="_blank"><h2>Experience</h2></a>
         <ul>
             <li>
-                <img src="./Images/Skills/html5.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/html5.svg" height="30px" width="30px" alt="HTML Logo">
                 <p>HTML</p>
             </li>
             <li>
-                <img src="./Images/Skills/css3.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/css3.svg" height="30px" width="30px" alt="CSS Logo">
                 <p>CSS</p>
             </li>
             <li>
-                <img src="./Images/Skills/bootstrap.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/bootstrap.svg" height="30px" width="30px" alt="Bootstrap Logo">
                 <p>Bootstrap</p>
             </li>
             <li>
-                <img src="./Images/Skills/javascript.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/javascript.svg" height="30px" width="30px" alt="JavaScript Logo">
                 <p>JavaScript</p>
             </li>
             <li>
-                <img src="./Images/Skills/jquery.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/jquery.svg" height="30px" width="30px" alt="Jquery Logo">
                 <p>Jquery</p>
             </li>
             <li>
-                <img src="./Images/Skills/react.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/react.svg" height="30px" width="30px" alt="React Logo">
                 <p>React</p>
             </li>
             <li>
-                <img src="./Images/Skills/typescript.svg" height="50px" width="50px" alt="Medium Logo">
+                <img src="./Images/Skills/typescript.svg" height="30px" width="30px" alt="TypeScript Logo">
                 <p>TypeScript</p>
             </li>
             <!-- <li>
